WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125987
webkit gtk 2.2.3 stable tarball compilation error
https://bugs.webkit.org/show_bug.cgi?id=125987
Summary
webkit gtk 2.2.3 stable tarball compilation error
aditya
Reported
2013-12-19 01:45:36 PST
Created
attachment 219632
[details]
configuration log file I am trying to install webkit gtk 2.2.3 stable tarball on kubuntu 13.04 64-bit machine. I tried running ./configure as, 1) ./configure 2) ./configure --enable-accelerated-compositing=no After completing configuration without any error (for both the ./configure commands), I tried ./make, for which I got following error message. Source/WebCore/platform/graphics/GLContext.cpp: In static member function 'static WTF::PassOwnPtr<WebCore::GLContext> WebCore::GLContext::createContextForWindow(GLNativeWindowType, WebCore::GLContext*)': Source/WebCore/platform/graphics/GLContext.cpp:155:39: error: 'GDK_IS_WAYLAND_DISPLAY' was not declared in this scope make[1]: *** [Source/WebCore/platform/graphics/libPlatformGtk_la-GLContext.lo] Error 1 make[1]: *** Waiting for unfinished jobs.... make[1]: Leaving directory `/home/hbbtv/Downloads/webkitgtk-2.2.3' make: *** [all] Error 2 I am attaching config.log file with this request. Please inform if any there is any solution / patch available for this error. Regards.
Attachments
configuration log file
(71.73 KB, text/x-log)
2013-12-19 01:45 PST
,
aditya
no flags
Details
Patch
(1.88 KB, patch)
2013-12-19 02:21 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2013-12-19 02:16:42 PST
Ugh, this is due to a shortcoming in the code. A speculative build fix coming shortly -- you can try it out for yourself, though I won't be able to try it out for myself until later today.
Zan Dobersek
Comment 2
2013-12-19 02:21:43 PST
Created
attachment 219633
[details]
Patch
aditya
Comment 3
2013-12-19 05:00:32 PST
The patch is working fine. The error is resolved. Thanks.
Zan Dobersek
Comment 4
2013-12-19 07:31:10 PST
OK, cool. I'll get this reviewed, landed and merged into the 2.2 branch.
Zan Dobersek
Comment 5
2013-12-23 08:25:20 PST
Comment on
attachment 219633
[details]
Patch Clearing flags on attachment: 219633 Committed
r160997
: <
http://trac.webkit.org/changeset/160997
>
Zan Dobersek
Comment 6
2013-12-23 08:25:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug